--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -51,12 +51,11 @@ You can change this filter to `%@mateuszdabrowski.%`. With the second wildcard a
 <TabItem value='where'>
 
 
-```sql {5} title="All subscribers that have an email address ending with 'mateuszdabrowski.pl' domain"
-SELECT
-    SubscriberKey,
-    EmailAddress
-FROM _Subscribers
-WHERE EmailAddress LIKE '%@%mateuszdabrowski.pl'
+```sql {4} title="All subscribers that have an email address ending with 'mateuszdabrowski.pl' domain"
+SELECT SubscriberKey,
+       EmailAddress
+  FROM _Subscribers
+ WHERE EmailAddress LIKE '%@%mateuszdabrowski.pl'
 ```
 
 In the above example, I used two wildcards - one before and one just after `@` symbol. It allows not only to catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
@@ -65,25 +64,23 @@ In the marketing automation world, however, `LIKE` operator is especially useful
 
 Suppose you would like to select all contacts with active phone subscription. In that case, you shouldn't use [equality operator](./sfmc-sql-where.mdx#equality) (`WHERE ActiveSubscription = 'Phone'`), as it would return only contacts that have just this one subscription. Some of your customers might, however, have multiple (phone and tv or phone and internet plans). For SQL, a field containing `'Phone'` is not equal with the one having a value of `'Phone', Internet'`. `LIKE` operator is here to save the day.
 
-```sql {5} title="All subscribers that have at least Phone subscription"
-SELECT
-    SubscriberKey,
-    EmailAddress
-FROM MasterSubscriberDE
-WHERE ActiveSubscription LIKE '%Phone%'
+```sql {4} title="All subscribers that have at least Phone subscription"
+SELECT SubscriberKey,
+       EmailAddress
+  FROM MasterSubscriberDE
+ WHERE ActiveSubscription LIKE '%Phone%'
 ```
 
 </TabItem>
 <TabItem value='select'>
 
-```sql {4} title="Categorize your database into either Internal or External records based on email domain"
-SELECT
-    SubscriberKey,
-    CASE
-        WHEN EmailAddress LIKE '%@%mateuszdabrowski.pl' THEN 'Internal'
-        ELSE 'External'
-    END AS ContactType
-FROM _Subscribers
+```sql {3} title="Categorize your database into either Internal or External records based on email domain"
+SELECT SubscriberKey,
+       CASE
+           WHEN EmailAddress LIKE '%@%mateuszdabrowski.pl' THEN 'Internal'
+           ELSE 'External'
+       END AS ContactType
+  FROM _Subscribers
 ```
 
 In the above example, I used two wildcards - one before and one just after `@` symbol. It allows not only to catch contacts in `@mateuszdabrowski.pl` domain, but also any subdomain, like `@dev.mateuszdabrowski.pl`.
@@ -115,13 +112,12 @@ Let's consider a scenario, where you have a multi picklist field containing comm
 <TabItem value='where'>
 
 
-```sql {6-9} title="All subscribers with at least one subscription product in their recommendations"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    RecommendedProducts
-FROM EcommerceUpsellDE
-WHERE RecommendedProducts LIKE '_'
+```sql {5-8} title="All subscribers with at least one subscription product in their recommendations"
+SELECT SubscriberKey,
+       EmailAddress,
+       RecommendedProducts
+  FROM EcommerceUpsellDE
+ WHERE RecommendedProducts LIKE '_'
     OR RecommendedProducts LIKE '_,%'
     OR RecommendedProducts LIKE '%,_,%'
     OR RecommendedProducts LIKE '%,_'
@@ -132,18 +128,17 @@ In the query above, we are filtering our database with `RecommendedProducts` fie
 </TabItem>
 <TabItem value='select'>
 
-```sql {5-8} title="Create boolean field from a multipicklist one to split database on recommendation type"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    CASE
-        WHEN RecommendedProducts LIKE '_' THEN 'True'
-        WHEN RecommendedProducts LIKE '_,%' THEN 'True'
-        WHEN RecommendedProducts LIKE '%,_,%' THEN 'True'
-        WHEN RecommendedProducts LIKE '_,%' THEN 'True'
-        ELSE 'False'
-    END AS IsSubscriptionRecommended
-FROM EcommerceUpsellDE
+```sql {4-7} title="Create boolean field from a multipicklist one to split database on recommendation type"
+SELECT SubscriberKey,
+       EmailAddress,
+       CASE
+           WHEN RecommendedProducts LIKE '_'     THEN 'True'
+           WHEN RecommendedProducts LIKE '_,%'   THEN 'True'
+           WHEN RecommendedProducts LIKE '%,_,%' THEN 'True'
+           WHEN RecommendedProducts LIKE '_,%'   THEN 'True'
+           ELSE 'False'
+       END AS IsSubscriptionRecommended
+  FROM EcommerceUpsellDE
 ```
 
 In the query above, we are creating new boolean field that will tell us whether the contact has at least one subscription product in their recommended lists. Great for personalized communication emphasizing this recommendation. We do this by assigning value `True` if at least one of four steps evaluates to true:
@@ -184,13 +179,12 @@ Consider the previous example with a field containing multiple IDs of your subsc
 If we would like to output only the Premium subscriptions, we would have to create a separate filter for each ID.
 
 
-```sql {6-14} title="This approach would require 16 lines to cover the use case"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    RecommendedProducts
-FROM EcommerceUpsellDE
-WHERE RecommendedProducts LIKE '1'
+```sql {5-13} title="This approach would require 16 lines to cover the use case"
+SELECT SubscriberKey,
+       EmailAddress,
+       RecommendedProducts
+  FROM EcommerceUpsellDE
+ WHERE RecommendedProducts LIKE '1'
     OR RecommendedProducts LIKE '1,%'
     OR RecommendedProducts LIKE '%,1,%'
     OR RecommendedProducts LIKE '%,1'
@@ -203,13 +197,12 @@ WHERE RecommendedProducts LIKE '1'
 
 With a group, we can optimize it — a lot.
 
-```sql {6-9} title="Same outcome with just 4 lines"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    RecommendedProducts
-FROM EcommerceUpsellDE
-WHERE RecommendedProducts LIKE '[1234]'
+```sql {5-8} title="Same outcome with just 4 lines"
+SELECT SubscriberKey,
+       EmailAddress,
+       RecommendedProducts
+  FROM EcommerceUpsellDE
+ WHERE RecommendedProducts LIKE '[1234]'
     OR RecommendedProducts LIKE '[1234],%'
     OR RecommendedProducts LIKE '%,[1234],%'
     OR RecommendedProducts LIKE '%,[1234]'
@@ -220,44 +213,42 @@ WHERE RecommendedProducts LIKE '[1234]'
 
 If we would like to categorize them using Wildcards, we would have to create a separate WHEN for each ID.
 
-```sql {5-14} title="This approach would require 36 WHEN/THEN lines to cover the use case"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    CASE
-        WHEN RecommendedProducts LIKE '1' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '1,%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '%,1,%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '1,%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '2' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '2,%' THEN 'Premium'
-        ...
-        WHEN RecommendedProducts LIKE '5' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '5,%' THEN 'Standard'
-        ...
-        ELSE 'No Subscription'
-    END AS RecommendedSubscriptionType
-FROM EcommerceUpsellDE
+```sql {4-13} title="This approach would require 36 WHEN/THEN lines to cover the use case"
+SELECT SubscriberKey,
+       EmailAddress,
+       CASE
+           WHEN RecommendedProducts LIKE '1'     THEN 'Premium'
+           WHEN RecommendedProducts LIKE '1,%'   THEN 'Premium'
+           WHEN RecommendedProducts LIKE '%,1,%' THEN 'Premium'
+           WHEN RecommendedProducts LIKE '1,%'   THEN 'Premium'
+           WHEN RecommendedProducts LIKE '2'     THEN 'Premium'
+           WHEN RecommendedProducts LIKE '2,%'   THEN 'Premium'
+           ...
+           WHEN RecommendedProducts LIKE '5'     THEN 'Standard'
+           WHEN RecommendedProducts LIKE '5,%'   THEN 'Standard'
+           ...
+           ELSE 'No Subscription'
+       END AS RecommendedSubscriptionType
+  FROM EcommerceUpsellDE
 ```
 
 With a group, we can optimize it  — a lot.
 
-```sql {5-12} title="Same outcome with just 8 WHEN/THEN lines"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    CASE
-        WHEN RecommendedProducts LIKE '[1234]' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[1234],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '%,[1234],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[1234],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[56789]' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '[56789],%' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '%,[56789],%' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '[56789],%' THEN 'Standard'
-        ELSE 'No Subscription'
-    END AS RecommendedSubscriptionType
-FROM EcommerceUpsellDE
+```sql {4-11} title="Same outcome with just 8 WHEN/THEN lines"
+SELECT SubscriberKey,
+       EmailAddress,
+       CASE
+           WHEN RecommendedProducts LIKE '[1234]'      THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[1234],%'    THEN 'Premium'
+           WHEN RecommendedProducts LIKE '%,[1234],%'  THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[1234],%'    THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[56789]'     THEN 'Standard'
+           WHEN RecommendedProducts LIKE '[56789],%'   THEN 'Standard'
+           WHEN RecommendedProducts LIKE '%,[56789],%' THEN 'Standard'
+           WHEN RecommendedProducts LIKE '[56789],%'   THEN 'Standard'
+           ELSE 'No Subscription'
+       END AS RecommendedSubscriptionType
+  FROM EcommerceUpsellDE
 ```
 
 </TabItem>
@@ -271,15 +262,14 @@ Group wildcard (`[]`) is also useful as a way to escape character in the `LIKE` 
 
 Writing `LIKE '10%'` is not a good idea, as it would return you all values starting with `10` - as the per cent sign is a wildcard meaning zero, one or more characters. You can, however, obtain what you want by writing:
 
-```sql {4-5} title="If the client has a discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has a higher one - leave it as it is. If no discount is available, make it 2%"
-SELECT
-    ContactKey,
-    CASE
-        WHEN Discount LIKE '[56789][%]' THEN '10%'
-        WHEN Discount LIKE '[01234][%]' THEN '5%'
-        WHEN Discount IS NOT NULL THEN Discount
-        ELSE '2%'
-    END AS NewDiscount
+```sql {3-4} title="If the client has a discount between 1 and 9%, let's bump it up to either 5% or 10%. If he or she has a higher one - leave it as it is. If no discount is available, make it 2%"
+SELECT ContactKey,
+       CASE
+           WHEN Discount LIKE '[56789][%]' THEN '10%'
+           WHEN Discount LIKE '[01234][%]' THEN '5%'
+           WHEN Discount IS NOT NULL       THEN Discount
+           ELSE '2%'
+       END AS NewDiscount
 ```
 
 By wrapping the `%` with the grouping sign `[]`, we are telling SQL to look for exactly the per cent sign. Thanks to it `'[1234][%]'` search will look for `1%`, `2%`, `3%` or `4%` values only.
@@ -301,13 +291,12 @@ We can simplify more with the use of range operator `-`. Instead of writing each
 >
 <TabItem value='where'>
 
-```sql {6-9} title="Now with range operator"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    RecommendedProducts
-FROM EcommerceUpsellDE
-WHERE RecommendedProducts LIKE '[1-4]'
+```sql {5-8} title="Now with range operator"
+SELECT SubscriberKey,
+       EmailAddress,
+       RecommendedProducts
+  FROM EcommerceUpsellDE
+ WHERE RecommendedProducts LIKE '[1-4]'
     OR RecommendedProducts LIKE '[1-4],%'
     OR RecommendedProducts LIKE '%,[1-4],%'
     OR RecommendedProducts LIKE '%,[1-4]'
@@ -316,22 +305,21 @@ WHERE RecommendedProducts LIKE '[1-4]'
 </TabItem>
 <TabItem value='select'>
 
-```sql {5-12} title="Now with range operator"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    CASE
-        WHEN RecommendedProducts LIKE '[1-4]' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[1-4],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '%,[1-4],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[1-4],%' THEN 'Premium'
-        WHEN RecommendedProducts LIKE '[5-9]' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '[5-9],%' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '%,[5-9],%' THEN 'Standard'
-        WHEN RecommendedProducts LIKE '[5-9],%' THEN 'Standard'
-        ELSE 'No Subscription'
-    END AS RecommendedSubscriptionType
-FROM EcommerceUpsellDE
+```sql {4-11} title="Now with range operator"
+SELECT SubscriberKey,
+       EmailAddress,
+       CASE
+           WHEN RecommendedProducts LIKE '[1-4]'     THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[1-4],%'   THEN 'Premium'
+           WHEN RecommendedProducts LIKE '%,[1-4],%' THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[1-4],%'   THEN 'Premium'
+           WHEN RecommendedProducts LIKE '[5-9]'     THEN 'Standard'
+           WHEN RecommendedProducts LIKE '[5-9],%'   THEN 'Standard'
+           WHEN RecommendedProducts LIKE '%,[5-9],%' THEN 'Standard'
+           WHEN RecommendedProducts LIKE '[5-9],%'   THEN 'Standard'
+           ELSE 'No Subscription'
+       END AS RecommendedSubscriptionType
+  FROM EcommerceUpsellDE
 ```
 
 </TabItem>
@@ -348,14 +336,13 @@ You can mix and match groups, ranges and wildcards.
 It is an excellent tool to create essential categorization solutions for uncontrolled data. For example, to clean up free text job title coming from web forms.
 
 ```sql title="Simplified Job Title categorization"
-SELECT
-    SubscriberKey
-    CASE
-        WHEN FreeTextJobTitle LIKE '[Cc]_[Oo]' THEN 'C-Suite'
-        WHEN FreeTextJobTitle LIKE '%[Mm]anager%' THEN 'Management'
-        WHEN FreeTextJobTitle LIKE '%[Ss]pecialist%' THEN 'Specialists'
-    END AS CorporateJobTitleGroup
-FROM _Subscriber
+SELECT SubscriberKey
+       CASE
+           WHEN FreeTextJobTitle LIKE '[Cc]_[Oo]'       THEN 'C-Suite'
+           WHEN FreeTextJobTitle LIKE '%[Mm]anager%'    THEN 'Management'
+           WHEN FreeTextJobTitle LIKE '%[Ss]pecialist%' THEN 'Specialists'
+       END AS CorporateJobTitleGroup
+  FROM _Subscriber
 ```
 
 :::
@@ -366,12 +353,11 @@ There is one more operator that is sometimes useful - the exclusion operator `^`
 
 This operator is especially useful for the use in `WHERE` statement. Best example? SQL for finding contacts with Subscriber Key not being correct Salesforce ID:
 
-```sql {4} title="Find all records in All Subscribers with Subscriber Key other than Salesforce ID"
-SELECT
-    SubscriberKey
-FROM _Subscribers
-WHERE SubscriberKey LIKE '%[^a-zA-Z0-9]%'
-    AND LEN(SubscriberKey) <> 18
+```sql {3} title="Find all records in All Subscribers with Subscriber Key other than Salesforce ID"
+SELECT SubscriberKey
+  FROM _Subscribers
+ WHERE SubscriberKey LIKE '%[^a-zA-Z0-9]%'
+   AND LEN(SubscriberKey) <> 18
 ```
 
 This short and straightforward query will look into each SubscriberKey and check whether in there is any character other the letter or digit (case-insensitive) or whether the length is not equal to 18. All such records have incorrect value and are eligible for cleanup or investigation. Perfect for Automation with deletion SSJS script or Verification Activity to alert administrator about issues.
@@ -380,11 +366,10 @@ This short and straightforward query will look into each SubscriberKey and check
 
 Finally, just as with other statements, you can add `NOT` statement before `LIKE` to search for not matching records:
 
-```sql {4} title="Same query as at the beginning of our CASE journey, but flipped"
-SELECT
-    ContactKey,
-    CASE
-        WHEN EmailAddress NOT LIKE '%@mateuszdabrowski.pl' THEN 'External'
-        ELSE 'Internal'
-    END AS ContactType
+```sql {3} title="Same query as at the beginning of our CASE journey, but flipped"
+SELECT ContactKey,
+       CASE
+           WHEN EmailAddress NOT LIKE '%@mateuszdabrowski.pl' THEN 'External'
+           ELSE 'Internal'
+       END AS ContactType
 ```
