--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -29,48 +29,47 @@ You can try to debug it with Journey Builder data or Reports, but in most cases,
 My favourite way to debug email sends is by using a SQL Query. Open your [Query Studio](./sfmc-sql-basics.mdx#query-studio) and copy-paste the below code:
 
 ```sql
-SELECT
-    s.SubscriberKey,
-    sub.EmailAddress,
-    sub.Status,
-    j.JourneyName,
-    j.VersionNumber AS JourneyVersion,
-    job.EmailName,
-    s.EventDate AS SentDate,
-    job.DeliveredTime AS DeliveryDate,
-    o.EventDate AS OpenDate,
-    c.EventDate AS ClickDate,
-    b.EventDate AS BounceDate,
-    b.BounceCategory,
-    b.BounceSubcategory,
-    b.SMTPBounceReason AS BounceReason,
-    u.EventDate AS UnsubscribeDate
-FROM _Sent s
-LEFT JOIN _Job job ON s.JobID = job.JobID
-LEFT JOIN _Open o ON s.JobID = o.JobID
-    AND s.ListID = o.ListID
-    AND s.BatchID = o.BatchID
-    AND s.SubscriberID = o.SubscriberID
-    AND o.IsUnique = 1
-LEFT JOIN _Click c ON s.JobID = c.JobID
-    AND s.ListID = c.ListID
-    AND s.BatchID = c.BatchID
-    AND s.SubscriberID = c.SubscriberID
-    AND c.IsUnique = 1
-LEFT JOIN _Bounce b ON s.JobID = b.JobID
-    AND s.ListID = b.ListID
-    AND s.BatchID = b.BatchID
-    AND s.SubscriberID = b.SubscriberID
-    AND b.IsUnique = 1
-LEFT JOIN _Unsubscribe u ON s.JobID = u.JobID
-    AND s.ListID = u.ListID
-    AND s.BatchID = u.BatchID
-    AND s.SubscriberID = u.SubscriberID
-    AND u.IsUnique = 1
-LEFT JOIN _JourneyActivity ja ON s.TriggererSendDefinitionObjectID = ja.JourneyActivityObjectID
-LEFT JOIN _Journey j ON ja.VersionID = j.VersionID
-LEFT JOIN _Subscribers sub ON s.SubscriberKey = sub.SubscriberKey
-WHERE CONVERT(DATE, s.EventDate) >= DATEADD(DAY, -1, CONVERT(DATE, GETDATE()))
+SELECT s.SubscriberKey     AS SubscriberKey,
+       sub.EmailAddress    AS EmailAddress,
+       sub.Status          AS SubscribtionStatus,
+       j.JourneyName       AS JourneyName,
+       j.VersionNumber     AS JourneyVersion,
+       job.EmailName       AS EmailName,
+       s.EventDate         AS SentDate,
+       job.DeliveredTime   AS DeliveryDate,
+       o.EventDate         AS OpenDate,
+       c.EventDate         AS ClickDate,
+       b.EventDate         AS BounceDate,
+       b.BounceCategory    AS BounceCategory,
+       b.BounceSubcategory AS BounceSubcategory
+       b.SMTPBounceReason  AS BounceReason,
+       u.EventDate         AS UnsubscribeDate
+  FROM _Sent s
+       LEFT JOIN _Job job ON job.JobID = s.JobID
+       LEFT JOIN _Open o ON o.JobID = s.JobID
+           AND o.ListID = s.ListID
+           AND o.BatchID = s.BatchID
+           AND o.SubscriberID = s.SubscriberID
+           AND o.IsUnique = 1
+       LEFT JOIN _Click c ON s.JobID = c.JobID
+           AND c.ListID = s.ListID
+           AND c.BatchID = s.BatchID
+           AND c.SubscriberID = s.SubscriberID
+           AND c.IsUnique = 1
+       LEFT JOIN _Bounce b ON s.JobID = b.JobID
+           AND b.ListID = s.ListID
+           AND b.BatchID = s.BatchID
+           AND b.SubscriberID = s.SubscriberID
+           AND b.IsUnique = 1
+       LEFT JOIN _Unsubscribe u ON s.JobID = u.JobID
+           AND u.ListID = s.ListID
+           AND u.BatchID = s.BatchID
+           AND u.SubscriberID = s.SubscriberID
+           AND u.IsUnique = 1
+       LEFT JOIN _JourneyActivity ja ON ja.JourneyActivityObjectID = s.TriggererSendDefinitionObjectID
+       LEFT JOIN _Journey j ON j.VersionID = ja.VersionID
+       LEFT JOIN _Subscribers sub ON sub.SubscriberKey = s.SubscriberKey
+ WHERE CONVERT(DATE, s.EventDate) >= DATEADD(DAY, -1, CONVERT(DATE, GETDATE()))
 ```
 
 Within a few seconds you will see information about sends from the last day. With all the details that might be useful for debugging, like STMP Bounce Reason, Subscriber Status, Unsubscribe Date, etc.
