--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -32,11 +32,10 @@ All string functions in SQL are using a 1-based index instead of 0-based indexin
 
 Both require two parameters - source value and the number of characters to return.
 
-```sql {2} title="LEFT and RIGHT can work both on strings as well as on other data types"
-SELECT
-    LEFT(FirstName, 1) AS FirstNameInitialLetter,
-    RIGHT(FirstName, 1) AS FirstNameEndingLetter,
-    LEFT(s.DateJoined, 3) AS MonthJoined
+```sql title="LEFT and RIGHT can work both on strings as well as on other data types"
+SELECT LEFT(FirstName, 1)    AS FirstNameInitialLetter,
+       RIGHT(FirstName, 1)   AS FirstNameEndingLetter,
+       LEFT(s.DateJoined, 3) AS MonthJoined
 ```
 
 Both those functions can be beneficial to clean and streamline your data by themselves, but their real power becomes evident when you mix them with [`CHARINDEX`](#charindex) for content-aware cuts.
@@ -45,11 +44,10 @@ Both those functions can be beneficial to clean and streamline your data by them
 
 `LEN` function returns a count of characters in the value.
 
-```sql {4} title="If you use Salesforce Contact ID as Subscriber Key, use LEN to find invalid records quickly"
-SELECT
-    s.SubscriberKey
-FROM _Subscribers s
-WHERE LEN(s.SubscriberKey) <> 18
+```sql {3} title="If you use Salesforce Contact ID as Subscriber Key, use LEN to find invalid records quickly"
+SELECT SubscriberKey
+  FROM _Subscribers
+ WHERE LEN(SubscriberKey) != 18
 ```
 
 It is less useful for segmentation but awesome for various administrative purposes. Apart from the example above, I highly recommend checking how this function combines with [`MAX` function](./sfmc-sql-numeric-functions.mdx#min--max).
@@ -80,13 +78,12 @@ CHARINDEX("Manager", JobTitle COLLATE Latin1_General_CS_AS)
 
 `CHARINDEX` is especially useful when combined with [`CASE`](./sfmc-sql-select.mdx#conditional-values-with-case) and [`LEFT`](#left--right)/[`RIGHT`](#left--right) functions, as it allows for smart string operations:
 
-```sql {3} title="Dynamically pull part of the Institution Name value"
-SELECT
-    CASE
-        WHEN CHARINDEX(' ', InstitutionName) > 0 THEN LEFT(InstitutionName, CHARINDEX(' ', InstitutionName) - 1)
-        ELSE InstitutionName
-    END AS InstitutionType
-FROM Accounts
+```sql {2} title="Dynamically pull part of the Institution Name value"
+SELECT CASE
+           WHEN CHARINDEX(' ', InstitutionName) > 0 THEN LEFT(InstitutionName, CHARINDEX(' ', InstitutionName) - 1)
+           ELSE InstitutionName
+       END AS InstitutionType
+  FROM Accounts
 ```
 
 The above query checks whether there is a space within `InstitutionName` value and if yes - it captures only the first word. Think about all the educational institution names with `University of...`, `School of...` - by taking only the first part, we can create new simplified data point categorizing records by type.
@@ -99,11 +96,10 @@ The above query checks whether there is a space within `InstitutionName` value a
 
 You can use it on both existing values pulled from source data extension, as well as on custom strings and digits added directly in the query. In most cases, you will mix both.
 
-```sql {4} title="Perfect for preparing your data for personalization"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    CONCAT(FirstName, ' ', LastName) AS FullName
+```sql {3} title="Perfect for preparing your data for personalization"
+SELECT SubscriberKey,
+       EmailAddress,
+       CONCAT(FirstName, ' ', LastName) AS FullName
 ```
 
 You can concatenate any number of strings by just adding them comma-separated.
@@ -112,11 +108,10 @@ You can concatenate any number of strings by just adding them comma-separated.
 
 In many cases, you might see concatenation done with the plus sign notation.
 
-```sql {4} title="Same as above, but with the plus notation"
-SELECT
-    SubscriberKey,
-    EmailAddress,
-    FirstName + ' ' + LastName AS FullName
+```sql {3} title="Same as above, but with the plus notation"
+SELECT SubscriberKey,
+       EmailAddress,
+       FirstName + ' ' + LastName AS FullName
 ```
 
 It might seem cleaner, but there are two downsides to this method:
@@ -129,27 +124,24 @@ It might seem cleaner, but there are two downsides to this method:
 
 `TRIM` function allows you to quickly clean your data by deleting unneeded characters from the beginning and the end of the provided string. By default it deletes whitespace.
 
-```sql {2} title="Noone likes useless whitespace in their database"
-SELECT
-    TRIM('   data from webform ') AS CleanData   /* Output: 'data from webform' */
+```sql title="Noone likes useless whitespace in their database"
+SELECT TRIM('   data from webform ') AS CleanData   /* Output: 'data from webform' */
 ```
 
 There are also two child functions - `RTRIM` and `LTRIM` that works the same but limit the cleaning to just one side of the value.
 
-```sql {2-4} title="Noone likes useless whitespace in their database"
-SELECT
-    LTRIM('   data from webform ') AS CleanLeftSide      /* Output: 'data from webform ' */
-    RTRIM('   data from webform ') AS CleanRightSide     /* Output: '   data from webform' */
-    LTRIM(RTRIM('   data from webform ')) AS SameAsTRIM  /* Output: 'data from webform' */
+```sql title="Noone likes useless whitespace in their database"
+SELECT LTRIM('   data from webform ')        AS CleanLeftSide      /* Output: 'data from webform ' */
+       RTRIM('   data from webform ')        AS CleanRightSide     /* Output: '   data from webform' */
+       LTRIM(RTRIM('   data from webform ')) AS SameAsTRIM  /* Output: 'data from webform' */
 ```
 
 :::note You Should Know
 
 You can also use `TRIM` to clean specified characters instead of (just) whitespace.
 
-```sql {2} title="No more '__-- Owner --__' in your values"
-SELECT
-    TRIM('_- ' FROM DirtyWebformData) AS CleanData
+```sql title="No more '__-- Owner --__' in your values"
+SELECT TRIM('_- ' FROM DirtyWebformData) AS CleanData
 ```
 
 In the above code, we firstly added a string `'_- '` containing all characters we want automatically deleted from the beginning and end. Then - after `FROM` joiner - the value, we want to clean.
